--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.13.4"
+  },
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "axios": "^0.19.0",
@@ -45,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://127.0.0.1:8000"
+  "proxy": "http://127.0.0.1:8000"
 }
